fix landscape bug on mobile, also revamp the auth page a bit

--- a/app/styles/app/layout.sass
+++ b/app/styles/app/layout.sass
@@ -22,7 +22,7 @@
 .profile-view
   position: relative
   width: 100%
-  min-height: 100vh
+  min-height: calc(100vh - 174px - 55px)
   background-color: white
 .inner
   max-width: 1024px
